--- a/css/css_box_model.css
+++ b/css/css_box_model.css
@@ -2,7 +2,9 @@
     width: 100px;
     height: 100px;
     line-height: 80px;
-    background: rgb(242, 255, 0);
+    background-color: rgb(242, 255, 0);
+    background-size: cover;
+    background-image: url(../image/cat.jpg);
     text-align: center;
     margin: auto;
     border: 2px solid red;
