--- a/css/css_box_model.css
+++ b/css/css_box_model.css
@@ -15,3 +15,26 @@
     font-weight: 400;
     font-family: 'Lato', sans-serif;
 }
+
+.box2{
+    width: 100px;
+    height: 100px;
+    box-sizing: border-box;
+    background-color: bisque;
+    border: 4px solid rgb(0, 255, 110);
+    color: rgb(255, 255, 255);
+    padding: 10px;
+}
+
+.button{
+    /* width: 100px;
+    height: 50px;
+    line-height: 50px; */
+    background: rgb(51, 110, 153);
+    color: aliceblue;
+    display: inline-block;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 20px;
+    border-radius: 5px;
+}
