--- a/css/css_box_model.css
+++ b/css/css_box_model.css
@@ -38,3 +38,27 @@
     margin: 20px;
     border-radius: 5px;
 }
+
+.block {
+    background: #000;
+    color: #fff;
+    height: 100px;
+    overflow-y: hidden;
+    margin: 20px auto;
+}
+
+.circle {
+    width: 300px;
+    height: 300px;
+    border-radius: 300px;
+    background: yellow;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.none {
+    display: none;
+    visibility: hidden;
+}
