--- a/css/css_flex.css
+++ b/css/css_flex.css
@@ -38,3 +38,12 @@
     flex-wrap: wrap;
     flex-wrap: wrap-reverse;
 }
+
+.justify-content {
+    justify-content: flex-start;
+    justify-content: flex-end;
+    justify-content: center;
+    justify-content: space-around;
+    justify-content: space-between;
+    justify-content: space-evenly;
+}
