--- a/src/scss/scc_pseudo.scss
+++ b/src/scss/scc_pseudo.scss
@@ -76,5 +76,10 @@
                 background: #dedede;
             }
         }
+        tr:last-child {
+            td {
+                background: rgb(197, 100, 35);
+            }
+        }
     }
 }
