--- a/src/scss/accrodion.scss
+++ b/src/scss/accrodion.scss
@@ -6,7 +6,7 @@
     .tab {
         border: 1px solid rgb(25, 45, 224);
 
-        label {
+        >label {
             display: flex;
             background: rgb(54, 73, 245);
             color: #fff;
