--- a/src/scss/accrodion.scss
+++ b/src/scss/accrodion.scss
@@ -11,14 +11,23 @@
             background: rgb(54, 73, 245);
             color: #fff;
             padding: 12px;
-            font-size: 26px;
             font-weight: 700;
             font-family: monospace;
             cursor: pointer;
             user-select: none;
+            justify-content: space-between;
+            align-items: center;
+
+            >div {
+                font-size: 26px;
+            }
 
             &:hover {
                 background: #f82459;
+            }
+
+            .close-icon {
+                display: none;
             }
         }
 
