--- a/src/scss/accrodion.scss
+++ b/src/scss/accrodion.scss
@@ -4,8 +4,12 @@
     margin: 20px auto;
 
     .tab {
-        border: 1px solid rgb(25, 45, 224);
+        border: 2px solid rgb(112, 208, 211);
+        border-bottom-width: 0;
 
+        &:last-child {
+            border-bottom-width: 2px;
+        }
         >label {
             display: flex;
             background: rgb(54, 73, 245);
