--- a/src/scss/accrodion.scss
+++ b/src/scss/accrodion.scss
@@ -42,6 +42,8 @@
 
         >input:checked {
             +label {
+                background: #f86024;
+
                 .open-icon {
                     display: none;
                 }
