--- a/src/scss/accrodion.scss
+++ b/src/scss/accrodion.scss
@@ -58,7 +58,15 @@
             }
         }
 
-        >input {
+                /**
+        *   屬性選擇器解決方案
+        **/
+        // >input[type=radio],
+        // >input[type=checkbox] {
+        //     display: none;
+        // }
+
+        .tab-switch {
             display: none;
         }
     }
