--- a/src/scss/layout_1.scss
+++ b/src/scss/layout_1.scss
@@ -5,14 +5,22 @@ body {
 }
 
 .header {
-    background: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    border-radius: 10px;
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    
+
+    .header-content {
+        background: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        border-radius: 10px;
+        border-top-right-radius: 0;
+        border-top-left-radius: 0;
+    }
 
     .menu {
         list-style-type: none;
@@ -34,6 +42,8 @@ body {
 
         .en {
             font-size: 14px;
+            font-family: monospace;
+            text-transform: uppercase;
         }
     }
 }
