--- a/src/scss/layout_1.scss
+++ b/src/scss/layout_1.scss
@@ -60,5 +60,23 @@ body {
         align-items: center;
         justify-content: space-between;
         min-height: 100vh;
+
+        >div {
+            background: rgba(14, 50, 80, 0.9);
+            // flex: 1;
+            width: 50%;
+            padding: 20px;
+            position: relative;
+
+
+            &:first-child::before {
+                content: '';
+                border-right: 3px dashed #fff;
+                position: absolute;
+                right: 10px;
+                top: 20px;
+                height: calc(100% - 40px);
+            }
+        }
     }
 }
