--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -35,3 +35,28 @@ a {
         border-right: solid 180px #fff;
     }
 }
+
+.form-control {
+    width: 100%;
+    height: 50px;
+    border: 0;
+    outline: 0;
+    padding: 0 15px;
+    border-radius: 8px;
+}
+
+.form-control-item {
+    margin-bottom: 15px;
+}
+
+.button {
+    padding: 8px 20px;
+    border: 0;
+    border-radius: 8px;
+    font-weight: 800;
+
+    &.primary {
+        background: #8110c2;
+        color: #fff;
+    }
+}
