課程顧問區塊建立

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -132,3 +132,14 @@ a {
         }
     }
 }
+
+.form-control-append {
+    position: absolute;
+    top: 0;
+    height: 100%;
+
+    .button {
+        height: 100%;
+        display: inline-block;
+    }
+}
