--- a/src/scss/layout_1.scss
+++ b/src/scss/layout_1.scss
@@ -9,6 +9,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 9;
 
     .header-content {
         background: #fff;
@@ -58,14 +59,29 @@ body {
 .join-form {
     color: #fff;
     background: #000;
-    background-image: url(../images/banner.jpeg);
+    background-image: url(../image/banner.jpeg);
     background-size: cover;
+    position: relative;
+    z-index: 1;
+
+    &::after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #00000083;
+        z-index: 1;
+    }
 
     .join-form-content {
         display: flex;
         align-items: center;
         // justify-content: space-between;
         min-height: 100vh;
+        position: relative;
+        z-index: 2;
 
 
         .content-wrap {
@@ -106,4 +122,23 @@ body {
     background-size: cover;
     background-position: center center;
     height: 100vh;
+    position: relative;
+    z-index: 2;
+    color: #fff;
+
+    &::after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #00000083;
+        z-index: 1;
+    }
+
+    .process-wrap {
+        position: relative;
+        z-index: 2;
+    }
 }
