--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -7,6 +7,11 @@
     font-size: 16px;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 .container {
     width: 80%;
     height: 100%;
@@ -16,9 +21,9 @@
 a {
     color: inherit;
     text-decoration: none;
-  }
+}
 
-  .slogan {
+.slogan {
     font-size: 24px;
     text-align: center;
     position: relative;
@@ -70,6 +75,7 @@ a {
             background-color: #833d15;
         }
     }
+
     &.danger {
         background: rgb(218, 49, 27);
         color: #fff;
