--- a/src/scss/product_discount.scss
+++ b/src/scss/product_discount.scss
@@ -28,6 +28,22 @@
         justify-content: center;
         position: relative;
         overflow: hidden;
+
+        .discount-bar {
+            background: #ff5858;
+            width: 100%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+            font-weight: 700;
+            font-family: 'Shantell Sans', cursive;
+            transform: rotate(45deg);
+            position: absolute;
+            right: -105px;
+            top: 10px;
+        }
     }
 
     .product-title {
