--- a/src/scss/todo.scss
+++ b/src/scss/todo.scss
@@ -35,6 +35,11 @@
             color: #fff;
         }
 
+        // input[type=checkbox]:checked+div {
+        //     color: red;
+        //     text-decoration: line-through;
+        // }
+
         &.delete {
             >:last-child {
                 color: red;
